Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11377

We should not issue rollback when start_seqno == snap_start_seqno == upper and snap_end_seqno > upper

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • None
    • Security Level: Public
    • None
    • Untriaged
    • No

    Description

      For the case where, start_seqno == snap_start_seqno == upper and snap_end_seqno > upper
      we issue rollback to client to rollback to rollback_seqno = upper which is already the value of start_seqno.

      Attachments

        For Gerrit Dashboard: MB-11377
        # Subject Branch Project Status CR V

        Activity

          People

            mikew Mike Wiederhold [X] (Inactive)
            venu Venu Uppalapati (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty