MB-11377: Don't rollback to start_seq when snap_start_seq == start_seq

We should never attempt to rollback to the snap_start_seqno when it is
the same as the start_seqno otherwise we risk potentially having the
server response by constantly asking the consumer to rollback to the
same seqno.

Change-Id: Id6a16df2f0e08fdd1bf7abb89f1eeead474310eb
Reviewed-on: http://review.couchbase.org/38154
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>